--- a/assets/scss/home_1/_banner.scss
+++ b/assets/scss/home_1/_banner.scss
@@ -154,6 +154,9 @@
 			a {
 				color: var(--vt-title-color);
 				background-color: #C9F7CA;
+				&:hover {
+					color: #fff;
+				}
 			}
 		}
 	}
