--- a/assets/scss/home_1/_why-choose.scss
+++ b/assets/scss/home_1/_why-choose.scss
@@ -90,6 +90,12 @@
 			a {
 				border: 2px solid #C9F7CA;
 				background-color: transparent; 
+				&:before {
+					background-color: #C9F7CA;
+				}
+				&:hover {
+					color: #000;
+				}
 			}
 		}
 	}
