--- a/assets/scss/home_2/_service.scss
+++ b/assets/scss/home_2/_service.scss
@@ -17,6 +17,7 @@
 	}
 }
 .vt-service-item-4 {
+	z-index: 1;
 	max-width: 280px;
 	padding: 40px 32px;
 	margin-bottom: -1px;
@@ -38,6 +39,7 @@
 		left: 0;
 		right: 0;
 		top: 16px;
+		z-index: -1;
 		width: 89%;
 		content: '';
 		height: 0px;
@@ -183,7 +185,7 @@
 }
 .vt-ser-img {
 	.vt-vertical-shape-2 {
-		bottom: 0px;
+		bottom: -44px;
 		background-color: #fff;
 		span {
 			background-color: #E7E7E7;
@@ -221,6 +223,12 @@
 	margin-right: 32px;
 	.item-icon {
 		margin-bottom: 25px;
+		svg {
+			path {
+				stroke-dasharray: 2500;
+				stroke-dashoffset: 0;
+			}
+		}
 	}
 	.item-text {
 		.ser_title {
@@ -231,6 +239,15 @@
 		p {
 			color: #454545;
 			font-size: 16px;
+		}
+	}
+	&:hover {
+		.item-icon {
+			svg {
+				path {
+					animation: SVGTX 15s ease;
+				}
+			}
 		}
 	}
 }
