--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,6 +12,8 @@
 
 @import "template";
 @import "header";
+@import "offcanvas";
+@import "search";
 
 /*global area*/
 /*----------------------------------------------------*/
