--- a/assets/scss/home_1/_service.scss
+++ b/assets/scss/home_1/_service.scss
@@ -289,6 +289,7 @@
 	} 
 }
 .vt-service-section-3 {
+	overflow: hidden;
 	background-color: var(--vt-gray);
 	.vt-vertical-shape-2 {
 		bottom: 5px;
