--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1638,55 +1638,6 @@ select:visited {
   border: 1px solid rgb(223, 225, 229);
 }
 
-@-webkit-keyframes Shape_Animation {
-  0%, 25% {
-    background-position: 0 100%;
-  }
-  75%, 100% {
-    background-position: 0 0;
-  }
-}
-
-@keyframes Shape_Animation {
-  0%, 25% {
-    background-position: 0 100%;
-  }
-  75%, 100% {
-    background-position: 0 0;
-  }
-}
-.vt-vertical-shape {
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 150px;
-  position: absolute;
-}
-.vt-vertical-shape:before {
-  top: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  pointer-events: none;
-}
-.vt-vertical-shape.active:before {
-  background: repeating-linear-gradient(#868686, #fff 6.25%), -webkit-gradient(linear, left top, left bottom, color-stop(33.3%, #000), color-stop(0, grey), color-stop(66.7%, #fff)) 0/100% 305%;
-  background: repeating-linear-gradient(#868686, #fff 6.25%), linear-gradient(#000 33.3%, grey 0, #fff 66.7%) 0/100% 305%;
-  background-blend-mode: multiply;
-  background-position: 0 0;
-  -webkit-filter: contrast(999);
-  filter: contrast(999);
-  mix-blend-mode: screen;
-  -webkit-animation: Shape_Animation 2s linear alternate;
-  animation: Shape_Animation 2s linear alternate;
-}
-.vt-vertical-shape.shape_2 {
-  height: 100px;
-}
-
 .vt-vertical-shape-2 {
   left: 0;
   width: 100%;
@@ -1697,7 +1648,7 @@ select:visited {
   width: 100%;
   height: 4px;
   display: block;
-  height: 33.33%;
+  height: 100%;
   margin-bottom: 8px;
   -webkit-transform-origin: bottom;
           transform-origin: bottom;
@@ -1713,7 +1664,7 @@ select:visited {
           transition-delay: 600ms;
 }
 .vt-vertical-shape-2.active span {
-  height: 0;
+  height: 8px;
 }
 
 .section_border_radius {
@@ -3101,6 +3052,16 @@ select:visited {
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
 }
+.vt-banner-section .vt-vertical-shape-2 {
+  bottom: 0;
+  height: 55px;
+}
+.vt-banner-section .vt-vertical-shape-2 span {
+  background-color: #fff;
+}
+.vt-banner-section .vt-vertical-shape-2 span:nth-child(1) {
+  margin-bottom: 16px;
+}
 .vt-banner-section .vt-banner-shape {
   right: 0;
   bottom: 0px;
@@ -3179,7 +3140,7 @@ select:visited {
 
 .vt-banner-text {
   z-index: 1;
-  max-width: 535px;
+  max-width: 550px;
   padding-top: 245px;
   position: relative;
   padding-bottom: 195px;
@@ -3219,9 +3180,10 @@ select:visited {
   left: 10px;
 }
 .vt-banner-text .banner_title {
-  line-height: 1.15;
+  line-height: 1;
   font-size: 64px;
   overflow: hidden;
+  padding-bottom: 5px;
   letter-spacing: -2px;
   color: var(--vt-title-color);
 }
@@ -3234,6 +3196,9 @@ select:visited {
   .vt-banner-text .banner_title {
     font-size: 45px;
   }
+}
+.vt-banner-text .banner_title .split-line {
+  overflow: visible;
 }
 .vt-banner-text p {
   padding-top: 25px;
@@ -3325,6 +3290,7 @@ select:visited {
 }
 
 .vt-service-item {
+  overflow: hidden;
   margin-bottom: 32px;
   padding: 48px 40px 75px;
   background: -webkit-gradient(linear, left top, left bottom, from(#CBF3CB), to(#EDF3CB));
@@ -3344,6 +3310,13 @@ select:visited {
 }
 .vt-service-item .item-text p {
   font-size: 16px;
+}
+.vt-service-item .vt-vertical-shape-2 {
+  bottom: -12px;
+  height: 40px;
+}
+.vt-service-item .vt-vertical-shape-2 span {
+  background-color: #fff;
 }
 .vt-service-item.ver_2 {
   background: -webkit-gradient(linear, left top, left bottom, from(#EFEBC2), to(#FFD397));
@@ -3589,10 +3562,10 @@ select:visited {
   }
 }
 .vt-service-pagination.swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet {
-  width: 8px;
+  width: 6px;
   opacity: 1;
-  height: 8px;
-  margin: 6px auto;
+  height: 6px;
+  margin: 8px auto;
   background-color: #D1D1D1;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
@@ -3610,21 +3583,22 @@ select:visited {
   background-color: var(--vt-gray);
 }
 .vt-service-section-3 .vt-vertical-shape-2 {
-  bottom: 5px;
+  bottom: 10px;
 }
 .vt-service-section-3 .vt-vertical-shape-2 span {
   background-color: #fff;
 }
+.vt-service-section-3 .vt-vertical-shape-2 span:nth-child(1) {
+  margin-bottom: 16px;
+}
 
 .vt-service-content {
   z-index: 1;
-  margin: 0 auto;
-  max-width: 1440px;
-  padding-right: 10px;
+  padding-right: 25px;
 }
-@media only screen and (min-width: 1400px) and (max-width: 1599px), only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px) {
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
   .vt-service-content {
-    padding-right: 25px;
+    padding-right: 0px;
   }
 }
 .vt-service-content .vt-service-bg {
@@ -3651,7 +3625,7 @@ select:visited {
   height: 0%;
   margin-bottom: 0;
   margin-right: 6px;
-  background-color: #fff;
+  background-color: var(--vt-gray);
   -webkit-transition: all 1000ms ease;
   transition: all 1000ms ease;
 }
@@ -3711,6 +3685,10 @@ select:visited {
 }
 .vt-service-text-wrap-3 .vt-section-title .section_title {
   font-size: 64px;
+  line-height: 1;
+}
+.vt-service-text-wrap-3 .vt-section-title .section_title .split-line {
+  overflow: visible;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
   .vt-service-text-wrap-3 .vt-section-title .section_title {
@@ -4057,10 +4035,10 @@ select:visited {
 }
 .vt-client-item .img_2 {
   opacity: 0;
-  -webkit-transform: scale(1) rotate(-180deg);
-          transform: scale(1) rotate(-180deg);
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
 }
 .vt-client-item:hover:before, .vt-client-item:hover:after {
   opacity: 1;
@@ -4074,13 +4052,13 @@ select:visited {
 }
 .vt-client-item:hover .img_1 {
   opacity: 0;
-  -webkit-transform: scale(0) rotate(180deg);
-          transform: scale(0) rotate(180deg);
+  -webkit-transform: translateY(-30px);
+          transform: translateY(-30px);
 }
 .vt-client-item:hover .img_2 {
   opacity: 1;
-  -webkit-transform: scale(-1) rotate(-180deg);
-          transform: scale(-1) rotate(-180deg);
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
 }
 
 /*---------------------------------------------------- */
@@ -4093,7 +4071,7 @@ select:visited {
 }
 .vt-testimonial-section .vt-section-title {
   margin: 0 auto;
-  max-width: 520px;
+  max-width: 400px;
 }
 @media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
   .vt-testimonial-section {
@@ -4185,9 +4163,9 @@ select:visited {
           justify-content: center;
 }
 .vt-testi-pagination .swiper-pagination-bullet {
-  width: 8px;
+  width: 6px;
   opacity: 1;
-  height: 8px;
+  height: 6px;
   margin: 6px auto;
   background-color: #D1D1D1;
   -webkit-transition: all 500ms ease;
@@ -4470,7 +4448,7 @@ select:visited {
   background-color: #fff;
   color: var(--vt-title-color);
 }
-.vt-blog-item .item-tag .blog_title {
+.vt-blog-item .blog_title {
   color: var(--vt-title-color);
   font-weight: 500;
   font-size: 23px;
@@ -4516,7 +4494,7 @@ select:visited {
 .vt-faq-item-area {
   margin: 0 auto;
   max-width: 800px;
-  margin-top: 35px;
+  margin-top: 55px;
   border-bottom: 1px solid #DFE1E5;
 }
 .vt-faq-item-area .accordion-item,
@@ -4582,12 +4560,13 @@ select:visited {
 .vt-faq-item-area .accordion-button::after {
   right: 0;
   width: 44px;
+  color: #000;
   height: 44px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 900;
   content: "\f067";
   position: absolute;
   -webkit-box-align: center;
@@ -4619,7 +4598,7 @@ select:visited {
 }
 .vt-contact-section .contact-img {
   bottom: 0;
-  opacity: 0.2;
+  opacity: 0.7;
   z-index: -1;
   left: 110px;
 }
@@ -4688,7 +4667,11 @@ select:visited {
   }
 }
 .vt-contact-text-wrap .vt-section-title .section_title {
+  line-height: 1;
   font-size: 64px;
+}
+.vt-contact-text-wrap .vt-section-title .section_title .split-line {
+  overflow: visible;
 }
 @media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
   .vt-contact-text-wrap .vt-section-title .section_title {
@@ -5487,7 +5470,7 @@ select:visited {
 .vt-banner-content-2 .vt-banner-text .banner_heading {
   z-index: 1;
   position: relative;
-  padding: 15px 0px;
+  padding: 28px 0px;
 }
 .vt-banner-content-2 .vt-banner-text .banner_heading:before {
   top: 0;
@@ -5502,11 +5485,11 @@ select:visited {
   transition: all 2500ms ease;
 }
 .vt-banner-content-2 .vt-banner-text .banner_heading .banner_title {
-  line-height: 1.15;
+  line-height: 1;
   max-width: 488px;
 }
 .vt-banner-content-2 .vt-banner-text p {
-  max-width: 520px;
+  max-width: 530px;
   padding-top: 30px;
 }
 .vt-banner-content-2 .vt-banner-img {
