--- a/assets/scss/home_1/_faq.scss
+++ b/assets/scss/home_1/_faq.scss
@@ -11,7 +11,7 @@
 .vt-faq-item-area {
 	margin: 0 auto;
 	max-width: 800px;
-	margin-top: 35px;
+	margin-top: 55px;
 	border-bottom: 1px solid #DFE1E5;
 	.accordion-item,
 	.accordion-button:not(.collapsed),
@@ -70,10 +70,11 @@
 	.accordion-button::after {
 		right: 0;
 		width: 44px;
+		color: #000;
 		height: 44px;
 		display: flex;
 		font-size: 16px;
-		font-weight: 300;
+		font-weight: 900;
 		content: '\f067';
 		position: absolute;
 		align-items: center;
