--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,6 +479,53 @@ Font load
 .vt-header-section.header_style_one.dark_version .mobile_menu_button span {
   background-color: #fff;
 }
+.vt-header-section.vertical_version .vt-vertical-menu-toggle-wrap {
+  padding: 15px 0px;
+  background-color: #fff;
+  display: none;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-header-section.vertical_version .vt-vertical-menu-toggle-wrap {
+    display: block;
+  }
+}
+.vt-header-section.vertical_version .vt-vertical-menu {
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100%;
+  position: fixed;
+  overflow-x: hidden;
+  background-color: #fff;
+  -webkit-transition: 500ms var(--cube-1);
+  transition: 500ms var(--cube-1);
+  border-right: 1px solid #C9F7CA;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-header-section.vertical_version .vt-vertical-menu {
+    left: -300px;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-header-section.vertical_version .vt-vertical-menu.active {
+    left: 0;
+  }
+}
+.vt-header-section.vertical_version .vt-vertical-menu::-webkit-scrollbar {
+  width: 6px;
+}
+.vt-header-section.vertical_version .vt-vertical-menu::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.vt-header-section.vertical_version .vt-vertical-menu::-webkit-scrollbar-thumb {
+  outline: none;
+  border-radius: 30px;
+  background: var(--vt-base-color-1);
+}
+.vt-header-section.vertical_version .mobile_menu_button {
+  display: block;
+}
 
 /* 
   sticky-header-css-start
@@ -769,6 +816,178 @@ Font load
   background-color: var(--log-base-color);
 }
 
+.vt-vertical-nav {
+  padding-left: 300px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-vertical-nav {
+    padding-left: 0;
+  }
+}
+
+.vt-vertical-menu .header-cta-offcanvas {
+  padding-left: 30px;
+  border-bottom: 1px solid #C9F7CA;
+}
+.vt-vertical-menu .header-cta-offcanvas .top-cta i {
+  width: 32px;
+  height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 14px;
+  margin-right: 12px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #E7E7E7;
+}
+.vt-vertical-menu .header-cta-offcanvas .top-cta span {
+  font-size: 13px;
+  max-width: 128px;
+  line-height: 1.38;
+}
+.vt-vertical-menu .header-cta-offcanvas .top-cta span a {
+  font-weight: 600;
+}
+.vt-vertical-menu .header-cta-offcanvas .off-canvas-btn {
+  width: 56px;
+  padding: 16px 0px;
+  border-left: 1px solid #C9F7CA;
+}
+.vt-vertical-menu .header-cta-offcanvas .off-canvas-btn .menu-close {
+  display: none;
+  border: none;
+  background-color: transparent;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-vertical-menu .header-cta-offcanvas .off-canvas-btn .menu-close {
+    display: block;
+  }
+}
+.vt-vertical-menu .vt-vertical-menu-search {
+  padding-left: 60px;
+  position: relative;
+  border-bottom: 1px solid #C9F7CA;
+}
+.vt-vertical-menu .vt-vertical-menu-search:before {
+  top: 10px;
+  left: 35px;
+  font-size: 18px;
+  content: "\f002";
+  font-weight: 400;
+  position: absolute;
+  font-family: "Font Awesome 5 Pro";
+}
+.vt-vertical-menu .vt-vertical-menu-search input {
+  width: 100%;
+  border: none;
+  height: 45px;
+  font-size: 14px;
+  color: rgba(16, 16, 16, 0.4);
+}
+.vt-vertical-menu .brand-logo {
+  max-width: 195px;
+  margin-top: 32px;
+  padding-left: 32px;
+}
+.vt-vertical-menu .mobile_menu_content {
+  margin-top: 56px;
+  position: static;
+  background-color: transparent;
+}
+.vt-vertical-menu .mobile_menu_content .mobile-main-navigation .navbar-nav li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: var(--vt-title-color) !important;
+}
+.vt-vertical-menu .mobile_menu_content .mobile-main-navigation .navbar-nav li a {
+  width: auto;
+  display: inline-block;
+  font-family: var(--vt-heading);
+}
+.vt-vertical-menu .mobile_menu_content {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  height: auto;
+  overflow: hidden;
+  padding-bottom: 0;
+}
+.vt-vertical-menu .mobile_menu .mobile_menu_content .mobile-main-navigation .navbar-nav .dropdown-menu li a {
+  color: var(--vt-title-color) !important;
+}
+.vt-vertical-menu .mobile_menu .dropdown .dropdown-btn {
+  width: 100%;
+  background-color: transparent;
+}
+.vt-vertical-menu .mobile_menu .dropdown .dropdown-btn i {
+  display: none;
+}
+.vt-vertical-menu .mobile_menu_content .mobile-main-navigation .navbar-nav li.dropdown a {
+  position: relative;
+}
+.vt-vertical-menu .mobile_menu_content .mobile-main-navigation .navbar-nav li.dropdown a:before {
+  right: 5px;
+  top: 12px;
+  font-size: 14px;
+  content: "\f078";
+  position: absolute;
+  font-family: "Font Awesome 6 Pro";
+}
+.vt-vertical-menu .dropdown-menu a {
+  padding-left: 0 !important;
+}
+.vt-vertical-menu .dropdown-menu a:before {
+  display: none;
+}
+.vt-vertical-menu .dropdown-menu a.active,
+.vt-vertical-menu .dropdown-menu a:hover {
+  background-color: transparent;
+}
+.vt-vertical-menu .vt-cta-btn {
+  padding-left: 32px;
+}
+.vt-vertical-menu .action-text {
+  margin-top: 90px;
+  padding-left: 32px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-top: 1px solid #C9F7CA;
+  border-bottom: 1px solid #C9F7CA;
+}
+.vt-vertical-menu .action-text a {
+  color: #101010;
+  font-size: 14px;
+}
+.vt-vertical-menu .action-text a span {
+  font-family: var(--vt-heading);
+}
+.vt-vertical-menu .action-text a i {
+  margin-left: 5px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.vt-vertical-menu .action-text a:hover {
+  letter-spacing: 0.5px;
+}
+.vt-vertical-menu .action-social {
+  padding-left: 32px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #C9F7CA;
+}
+.vt-vertical-menu .action-social a {
+  font-size: 16px;
+  margin-right: 15px;
+}
+.vt-vertical-menu .action-social a:hover {
+  color: #C9F7CA;
+}
+
 /* 
   offcanvas-start
 */
@@ -777,7 +996,7 @@ Font load
   right: 0px;
   top: 0px;
   background: #fff;
-  z-index: 9;
+  z-index: 12;
   max-width: 720px;
   height: 100vh;
   width: 100%;
@@ -3094,6 +3313,9 @@ select:visited {
   .vt-banner-section:before {
     height: 100%;
   }
+}
+.vt-banner-section.vertical_top:before {
+  top: 0;
 }
 .vt-banner-section.dark_version:before {
   background: -webkit-gradient(linear, left top, left bottom, from(#101010), to(rgba(16, 16, 16, 0)));
