--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -463,6 +463,51 @@
 			}
 		}
 	}
+	&.vertical_version {
+		.vt-vertical-menu-toggle-wrap {
+			padding: 15px 0px;
+			background-color: #fff;
+			display: none;
+			@media #{$xl,$lg,$md,$sm,$xs} {
+				display: block;
+			}
+		}
+		.vt-vertical-menu {
+			top: 0;
+			left: 0;
+			width: 300px;
+			height: 100%;
+			position: fixed;
+			overflow-x: hidden;
+			background-color: #fff;
+			transition: 500ms var(--cube-1);
+			border-right: 1px solid #C9F7CA;
+			@media #{$xl,$lg,$md,$sm,$xs} { 
+				left: -300px;
+			}
+			&.active {
+				@media #{$xl,$lg,$md,$sm,$xs} { 
+					left: 0;
+				}
+			}
+			&::-webkit-scrollbar {
+				width: 6px;
+			}
+
+			&::-webkit-scrollbar-track {
+				box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+			}
+
+			&::-webkit-scrollbar-thumb {
+				outline: none;
+				border-radius: 30px;
+				background: var(--vt-base-color-1);
+			}
+		}
+		.mobile_menu_button {
+			display: block;
+		}
+	}
 }
 
 /* 
@@ -718,6 +763,173 @@
   			display: inline-block;
   			font-family: var(--log-heading-2);
   			background-color: var(--log-base-color);
+  		}
+  	}
+  }
+  .vt-vertical-nav {
+  	padding-left: 300px;
+  	@media #{$xl,$lg,$md,$sm,$xs} { 
+  		padding-left: 0;
+  	}
+  }
+  .vt-vertical-menu {
+  	.header-cta-offcanvas {
+  		padding-left: 30px;
+  		border-bottom: 1px solid #C9F7CA;
+  		.top-cta {
+  			
+  			i {
+  				width: 32px;
+  				height: 32px;
+  				display: flex;
+  				font-size: 14px;
+  				margin-right: 12px;
+  				align-items: center;
+  				border-radius: 100%;
+  				justify-content: center;
+  				background-color: #E7E7E7;
+  			}
+  			span {
+  				font-size: 13px;
+  				max-width: 128px;
+  				line-height: 1.38;
+  				a {
+  					font-weight: 600;
+  				}
+  			}
+  		}
+  		.off-canvas-btn {
+  			width: 56px;
+  			padding: 16px 0px;
+  			border-left: 1px solid #C9F7CA;
+  			.menu-close {
+  				display: none;
+  				border: none;
+  				background-color: transparent;
+  				@media #{$xl,$lg,$md,$sm,$xs} {
+  					display: block;
+  				}
+  			}
+  		}
+  	}
+  	.vt-vertical-menu-search {
+  		padding-left: 60px;
+  		position: relative;
+  		border-bottom: 1px solid #C9F7CA;
+  		&:before {
+  			top: 10px;
+  			left: 35px;
+  			font-size: 18px;
+  			content: "\f002";
+  			font-weight: 400;
+  			position: absolute;
+  			font-family: "Font Awesome 5 Pro";
+  		}
+  		input {
+  			width: 100%;
+  			border: none;
+  			height: 45px;
+  			font-size: 14px;
+  			color: rgba(16, 16, 16, .40);
+  		}
+  	}
+  	.brand-logo {
+  		max-width: 195px;
+  		margin-top: 32px;
+  		padding-left: 32px;
+  	}
+  	.mobile_menu_content {
+  		margin-top: 56px;
+  		position: static;
+  		background-color: transparent;
+  	}
+  	.mobile_menu_content .mobile-main-navigation .navbar-nav li a {
+  		font-size: 16px;
+  		text-transform: capitalize;
+  		color: var(--vt-title-color) !important;
+  	}
+  	.mobile_menu_content .mobile-main-navigation .navbar-nav li a {
+  		width: auto;
+  		display: inline-block;
+  		font-family: var(--vt-heading);
+  	}
+  	.mobile_menu_content {
+  		box-shadow: none;
+  		height: auto;
+  		overflow: hidden;
+  		padding-bottom: 0;
+  	}
+  	.mobile_menu .mobile_menu_content .mobile-main-navigation .navbar-nav .dropdown-menu li a {
+  		color: var(--vt-title-color) !important;
+  	}
+  	.mobile_menu .dropdown .dropdown-btn {
+  		width: 100%;
+  		background-color: transparent;
+  		i {
+  			display: none;
+  		}
+  	}
+  	.mobile_menu_content .mobile-main-navigation .navbar-nav li {
+  		&.dropdown {
+  			a {
+  				position: relative;
+  				&:before {
+  					right: 5px;
+  					top: 12px;
+  					font-size: 14px;
+  					content: '\f078';
+  					position: absolute;
+  					font-family: "Font Awesome 6 Pro";
+  				}
+  			}
+  		}
+  	}
+  	.dropdown-menu a {
+  		padding-left: 0 !important;
+  		&:before {
+  			display: none;
+  		}
+  	}
+  	.dropdown-menu a.active,
+  	.dropdown-menu a:hover {
+  		background-color: transparent;
+  	}
+  	.vt-cta-btn {
+  		padding-left: 32px;
+  	}
+  	.action-text {
+  		margin-top: 90px;
+  		padding-left: 32px;
+  		padding-top: 12px;
+  		padding-bottom: 12px;
+  		border-top: 1px solid #C9F7CA;
+  		border-bottom: 1px solid #C9F7CA;
+  		a {
+  			color: #101010;
+  			font-size: 14px;
+  			span {
+  				font-family: var(--vt-heading);
+  			}
+  			i {
+  				margin-left: 5px;
+  				transform: rotate(-45deg);
+  			}
+  			&:hover {
+  				letter-spacing: .5px;
+  			}
+  		}
+  	}
+  	.action-social {
+  		padding-left: 32px;
+  		padding-top: 12px;
+  		padding-bottom: 12px;
+  		border-bottom: 1px solid #C9F7CA;
+  		a {
+  			font-size: 16px;
+  			margin-right: 15px;
+  			&:hover {
+  				color: #C9F7CA;
+  			}
   		}
   	}
   }
