--- a/assets/scss/home_1/_banner.scss
+++ b/assets/scss/home_1/_banner.scss
@@ -1,10 +1,21 @@
 .vt-banner-section {
 	overflow: hidden;
+	&.video_bg {
+		&:after {
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			content: '';
+			position: absolute;
+			background-color: rgba(255, 255, 255, 0.5);
+		}
+	}
 	.bt-banner-img {
 		width: 100%;
 		z-index: -1;
 		height: 100%;
-		img {
+		img,video {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
